# precoil

./: .gitignore  README.md  pyproject.toml
precoil/: __init__.py  config.py
